# pipen-cli-require

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
pipen_cli_require/: __init__.py  entry.py  require.py  version.py
pipen_cli_run/: __init__.py  entry.py  utils.py
tests/: __init__.py  example_pipeline.py  example_procs.py  fakepython.py  malformat_requirements.py  pipen_args_pipeline.py  require_if_pipeline.py  test_cli_require.py  test_cli_run.py  test_malformat.py  test_pipen_args_pipeline.py  test_require_if.py  test_run_check.py  utils.py
