[tool.poetry]
name = "pipen-cli-require"
version = "0.3.1"
description = "A pipen cli plugin to check requirements for processes of a pipeline"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
pipen-annotate = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-asyncio = "^0.20"
pytest-cov = "^4"
pytest-xdist = "^3"
cmdy = "^0.5"
pipen-args = "^0.6"

[tool.poetry.plugins.pipen_cli]
cli-require = "pipen_cli_require:PipenCliRequirePlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py37', 'py38', 'py39']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov-config=.coveragerc --cov=pipen_cli_require --cov-report xml:.coverage.xml --cov-report term-missing"
asyncio_mode = "auto"
filterwarnings = [
    #"error"
]
console_output_style = "progress"
junit_family = "xunit1"
