[tool.poetry]
name = "pipen-cli-require"
version = "0.11.0"
description = "A pipen cli plugin to check requirements for processes of a pipeline"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
pipen-annotate = "^0.13"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-asyncio = "^0.20"
pytest-cov = "^4"
pytest-xdist = "^3"
pipen-args = "^0.14"

[tool.poetry.plugins.pipen_cli]
cli-require = "pipen_cli_require:PipenCliRequirePlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 87
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
addopts = "-vv -n auto --cov-config=.coveragerc --cov=pipen_cli_require --cov-report xml:.coverage.xml --cov-report term-missing"
asyncio_mode = "auto"
filterwarnings = [
    #"error"
]
console_output_style = "progress"
junit_family = "xunit1"
